Changelog since cleanup-branch of 31.01.2020


changelog of master branch
    - updated libraries
    - added datapack support
    fixed bugs:
        - various exceptions from left-over things in the registry & slot changes from last snapshot
        - various issues with slot drawing
        - fixed exception on shift-clicking crafting output of main inventory


changelog of snapshot 20w09a [released on 26.02.2020]
    - changed TextureAtlas-block-addition system to be based on mod-based/texture size-based atlases
    - new blocks: furnace with inventory & crafting, barrel, ice variants, bone block, book shelf, coral blocks,
                  pumpkin, carved pumpkin, melon, clay, coarse dirt, prismarin blocks, dried kelp block, end stones,
                  glowstone, magma block, mossy stone bricks, nether bricks, nether wart block, netherrack,
                  purpur blocks, quartz slab, red nether bricks, smooth quartz slab, soul sand
    - added key "E" to close various inventories
    - Block-class has now an CUSTOM_WALING_SPEED_MULTIPLIER-attribute used for custom waling speeds ontop of blocks
    - changed mod.json format to have an "version"-attribute & an "loader"-attribute
    - USE_MISSING_TEXTURES_ON_MISS_TEXTURE config option is now False by default
    - changed some get_name-methodes to NAME-attribute
    - removed some deprecated things
    - changed how things are registered, THIS IS AN BRAKING CHANGE!
    fixed bugs:
        - game crashes when using "/tp <position>"-command
        - debug world doesn't use the block state definition correctly
        - can't get items out of an tag-handled slot
        - cobblestone was not arrival
        - crash when not arrival python file is linked from mod.json file
        - crash when block-name-prefix is no mod-prefix
        - crash when model-name-prefix is no mod-prefix
        - some chest textures were not drawn correct

changelog of snapshot 20w07a [released on 10.02.2020]